@@ -1135,7 +1135,7 @@ Some variables function as toggles (On/Off).  Unless otherwise noted 0 is Off an
 		$g_reopen_bug_threshold
 	</td>
 	<td width="80%" bgcolor="#ffffff">
-		hr size
+		Access level needed to re-open bugs.  Look in the constant_inc.php file if you want to set a different value.
 	</td>
 </tr>
 <tr>
@@ -1218,7 +1218,7 @@ Some variables function as toggles (On/Off).  Unless otherwise noted 0 is Off an
 </tr>
 <tr>
 	<td colspan="2" bgcolor="#eeeeee">
-		Access level needed to re-open bugs.  Look in the constant_inc.php file if you want to set a different value.
+		&nbsp;
 	</td>
 </tr>
 </table>
